<resources>
    <string name="app_name">Synchrony</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Capital">Capital</string>
    <string name="Region">Region</string>
    <string name="Sub_Region">Sub_Region</string>
    <string name="latlng">Latitude-Longitude</string>
    <string name="area">Area</string>
    <string name="maps">Map</string>
    <string name="population">Population</string>
    <string name="timezones">TimeZones</string>
    <string name="continents">Continents</string>
    <string name="startOfWeek">Start of Week</string>
    <string name="work_experience_text">Work Experience</string>
    <string name="work_experience">Working as an Android Developer in JioSphere, A Chromium Engine based browser with 1 Cr+ downloads, and experienced in Java/Kotlin, Jetpack Compose, Jetpack Components, Room/Sqlite Db, Retrofit.\nDeveloped a feature for storage for all incoming Notifications and displaying them using Room Db, Coroutines and Jetpack Compose:\n\n
 Enhanced performance for scrolling by stopping re-compositions of views and similarly for
Storing and Fetching data from Db and implemented various other Screens in Jetpack
Compose.\n\nDeveloped Browser Sync Feature where implemented various Sync Api (REST Api) using Retrofit
where all clients can Upload/Download data and showcase in Client’s device.</string>
    <string name="work_experience_headline">Software Development Engineer, June 2021 - Present | JIO Platform Ltd., Bangalore</string>

    <string name="education_level1">Btech: (2017-2021)</string>
    <string name="education_level2">Intermediate: (2014-2016)</string>
    <string name="education_level3">Class 10th: (2014)</string>


</resources>