<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".fragments.ProfileFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="0dp"
            android:padding="15dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/profile_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Raj Kumar Basuri"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:text="@string/education_level1"
                                android:textSize="15sp"
                                android:layout_alignParentStart="true"
                                android:textStyle="bold"/>

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="5dp">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/black"
                                    android:text="University"
                                    android:textSize="15sp"
                                    android:layout_alignParentStart="true"
                                    android:textStyle="bold"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="#6E6C6C"
                                    android:text="NIT Rourkela"
                                    android:textSize="15sp"
                                    android:layout_alignParentEnd="true"
                                    android:textStyle="bold"/>
                            </RelativeLayout>

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="5dp">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/black"
                                    android:text="Department"
                                    android:textSize="15sp"
                                    android:layout_alignParentStart="true"
                                    android:textStyle="bold"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="#6E6C6C"
                                    android:text=" ECE "
                                    android:textSize="15sp"
                                    android:layout_alignParentEnd="true"
                                    android:textStyle="bold"/>
                            </RelativeLayout>


                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="5dp">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/black"
                                    android:text="CGPA"
                                    android:textSize="15sp"
                                    android:layout_alignParentStart="true"
                                    android:textStyle="bold"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="#6E6C6C"
                                    android:text="7.24"
                                    android:textSize="15sp"
                                    android:layout_alignParentEnd="true"
                                    android:textStyle="bold"/>
                            </RelativeLayout>



                        </LinearLayout>




                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:text="@string/education_level2"
                                android:textSize="15sp"
                                android:layout_alignParentStart="true"
                                android:textStyle="bold"/>

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="5dp">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/black"
                                    android:text="School"
                                    android:textSize="15sp"
                                    android:layout_alignParentStart="true"
                                    android:textStyle="bold"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="#6E6C6C"
                                    android:text="DPS Kalinga"
                                    android:textSize="15sp"
                                    android:layout_alignParentEnd="true"
                                    android:textStyle="bold"/>
                            </RelativeLayout>


                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="5dp">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/black"
                                    android:text="CGPA"
                                    android:textSize="15sp"
                                    android:layout_alignParentStart="true"
                                    android:textStyle="bold"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="#6E6C6C"
                                    android:text="80.4"
                                    android:textSize="15sp"
                                    android:layout_alignParentEnd="true"
                                    android:textStyle="bold"/>
                            </RelativeLayout>



                        </LinearLayout>




                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:text="@string/education_level3"
                                android:textSize="15sp"
                                android:layout_alignParentStart="true"
                                android:textStyle="bold"/>

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="5dp">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/black"
                                    android:text="School"
                                    android:textSize="15sp"
                                    android:layout_alignParentStart="true"
                                    android:textStyle="bold"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="#6E6C6C"
                                    android:text="DAV Public School"
                                    android:textSize="15sp"
                                    android:layout_alignParentEnd="true"
                                    android:textStyle="bold"/>
                            </RelativeLayout>



                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="5dp">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/black"
                                    android:text="CGPA"
                                    android:textSize="15sp"
                                    android:layout_alignParentStart="true"
                                    android:textStyle="bold"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="#6E6C6C"
                                    android:text="9.8"
                                    android:textSize="15sp"
                                    android:layout_alignParentEnd="true"
                                    android:textStyle="bold"/>
                            </RelativeLayout>



                        </LinearLayout>




                    </com.google.android.material.card.MaterialCardView>






                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/work_experience_text"
                        android:textSize="15sp"
                        android:layout_alignParentStart="true"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/black"
                        android:text="@string/work_experience_headline"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_alignParentStart="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/black"
                        android:text="@string/work_experience"
                        android:textSize="15sp"
                        android:layout_alignParentStart="true" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

    </ScrollView>




</LinearLayout>